Feasibility weighted BO

--- a/BO-GTData/BO_feasibility_aware.ipynb
+++ b/BO-GTData/BO_feasibility_aware.ipynb
@@ -32,224 +32,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>Group ID</th>\n",
-       "      <th>Polymer Solubility</th>\n",
-       "      <th>Gelation Enthalpy</th>\n",
-       "      <th>Shear Modulus</th>\n",
-       "      <th>Manufacturability</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#</th>\n",
-       "      <th>mg/mL</th>\n",
-       "      <th>J/g</th>\n",
-       "      <th>Kpa</th>\n",
-       "      <th>--</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>51.344743</td>\n",
-       "      <td>1.25180</td>\n",
-       "      <td>4.965500</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20.121238</td>\n",
-       "      <td>56.63540</td>\n",
-       "      <td>0.536800</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>35.672397</td>\n",
-       "      <td>3.46590</td>\n",
-       "      <td>1.036200</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>29.114323</td>\n",
-       "      <td>2.56890</td>\n",
-       "      <td>0.998800</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>123.417722</td>\n",
-       "      <td>0.14074</td>\n",
-       "      <td>1.899265</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>81.196581</td>\n",
-       "      <td>88.70100</td>\n",
-       "      <td>1.078000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>84.919473</td>\n",
-       "      <td>0.30367</td>\n",
-       "      <td>2.343650</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>64.625850</td>\n",
-       "      <td>27.80800</td>\n",
-       "      <td>3.263690</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>47.923323</td>\n",
-       "      <td>116.06000</td>\n",
-       "      <td>5.088030</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>173.697270</td>\n",
-       "      <td>2.05890</td>\n",
-       "      <td>10.186500</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>47.904192</td>\n",
-       "      <td>122.74000</td>\n",
-       "      <td>0.285000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>103.370787</td>\n",
-       "      <td>16.75100</td>\n",
-       "      <td>1.845836</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>80.965909</td>\n",
-       "      <td>7.85260</td>\n",
-       "      <td>9.460780</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>63.909774</td>\n",
-       "      <td>114.01000</td>\n",
-       "      <td>41.827700</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>35.087719</td>\n",
-       "      <td>45.47800</td>\n",
-       "      <td>0.880955</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>120.218579</td>\n",
-       "      <td>1.47510</td>\n",
-       "      <td>9.700660</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>152.439024</td>\n",
-       "      <td>15.30000</td>\n",
-       "      <td>29.505300</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>79.096045</td>\n",
-       "      <td>29.05000</td>\n",
-       "      <td>15.751700</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>116.319444</td>\n",
-       "      <td>0.47714</td>\n",
-       "      <td>0.030895</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>57.750760</td>\n",
-       "      <td>1.65600</td>\n",
-       "      <td>0.180700</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Group ID Polymer Solubility Gelation Enthalpy Shear Modulus Manufacturability\n",
-       "#                     mg/mL               J/g           Kpa                --\n",
-       "1                 51.344743           1.25180      4.965500                 1\n",
-       "2                 20.121238          56.63540      0.536800                 0\n",
-       "3                 35.672397           3.46590      1.036200                 0\n",
-       "4                 29.114323           2.56890      0.998800                 0\n",
-       "5                123.417722           0.14074      1.899265                 1\n",
-       "6                 81.196581          88.70100      1.078000                 1\n",
-       "7                 84.919473           0.30367      2.343650                 1\n",
-       "8                 64.625850          27.80800      3.263690                 1\n",
-       "9                 47.923323         116.06000      5.088030                 1\n",
-       "10               173.697270           2.05890     10.186500                 1\n",
-       "11                47.904192         122.74000      0.285000                 1\n",
-       "12               103.370787          16.75100      1.845836                 1\n",
-       "13                80.965909           7.85260      9.460780                 1\n",
-       "14                63.909774         114.01000     41.827700                 1\n",
-       "15                35.087719          45.47800      0.880955                 0\n",
-       "16               120.218579           1.47510      9.700660                 1\n",
-       "17               152.439024          15.30000     29.505300                 1\n",
-       "18                79.096045          29.05000     15.751700                 0\n",
-       "19               116.319444           0.47714      0.030895                 1\n",
-       "20                57.750760           1.65600      0.180700                 0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#normalizing the inputs\n",
@@ -265,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,6 +58,20 @@
     "y_obj_pd_normal = (y_obj_pd - ymeans) / ystddv\n",
     "\n",
     "y_pd.iloc[:, [0,1,2]] = y_obj_pd_normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objective_properties = ['Polymer Solubility', 'Gelation Enthalpy', 'Shear Modulus']\n",
+    "# objective_properties = ['Polymer Solubility', 'Gelation Enthalpy']\n",
+    "scaling = {'ymeans': ymeans[objective_properties],\n",
+    "           'ystddv': ystddv[objective_properties],\n",
+    "           'xmeans': xmeans,\n",
+    "           'xstddv': xstddv}"
    ]
   },
   {
@@ -443,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,37 +260,63 @@
     "        var += tmp_std**2\n",
     "    return mean, var**0.5\n",
     "\n",
-    "# function to calculate acquisition function \n",
+    "# function to calculate acquisition function - feasibility weighted acquisition\n",
     "def acquisition_func(X, models, liklihoods, y_min_curr):\n",
     "    X = np.reshape(X, (1, -1))\n",
-    "    pred_mean, pred_std = multi_objective_predict(X, models, liklihoods) \n",
+    "    pred_mean, pred_std = multi_objective_predict(X, models[0:-1], liklihoods[0:-1]) #get prediction mean and standard dev\n",
+    "    cls_probs = class_probability(X, models[-1]) # vector with class probabilities prediction\n",
+    "    feasible_probs = cls_probs[1] #class 1 is assumed as feasible class\n",
+    "\n",
     "    improv = pred_mean - y_min_curr\n",
     "    z_score = np.divide(improv, pred_std + 1E-9)\n",
     "    acf = np.multiply(improv, norm.cdf(z_score)) + np.multiply(pred_std, norm.pdf(z_score))\n",
-    "    return (-1.0) * acf "
+    "    return (-1.0) * acf * feasible_probs        # weighting acf value with Pr(feasible|X)\n",
+    "\n",
+    "#function to calculate class probabilities\n",
+    "def class_probability(X, model):\n",
+    "    with torch.no_grad():\n",
+    "        logit_dist = model(torch.tensor(X, dtype=torch.float))\n",
+    "    samples = logit_dist.sample(torch.Size((256,))).exp()\n",
+    "    return (samples / samples.sum(-2, keepdim=True)).mean(0)\n",
+    "\n",
+    "# inverse transform \n",
+    "def inverse_transform(val, mean, std):\n",
+    "    return std * val + mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0 - Best Acf value = -0.049\n",
+      "Iteration 10 - Best Acf value = -0.049\n",
+      "Iteration 20 - Best Acf value = -0.049\n",
+      "Iteration 30 - Best Acf value = -0.049\n",
+      "Iteration 40 - Best Acf value = -0.049\n"
+     ]
+    }
+   ],
    "source": [
     "# search for best point\n",
-    "n_restarts = 100\n",
+    "n_restarts = 50\n",
     "# x_bounds = np.array([[2000, 10000], [0, 100], [0, 40], [5000, 15000], [80, 100], [0,100], [60, 100], [70, 100]])\n",
     "x_bounds = np.c_[x_mins, x_maxs]\n",
     "search_grid = np.random.uniform(x_bounds[:, 0], x_bounds[:, 1], size=(10*n_restarts, len(x_bounds)))\n",
     "\n",
-    "mo_models = [reg_model1, reg_model2]\n",
-    "mo_likls = [reg_likl1, reg_likl2]\n",
+    "mo_models = [reg_model1, reg_model2, reg_model3, cls_model] # includes all necessary models for optimization\n",
+    "mo_likls = [reg_likl1, reg_likl2, reg_likl3, cls_likl]\n",
     "\n",
     "# Swith on eval mode\n",
     "for i in range(len(mo_models)):\n",
     "    mo_models[i].eval()\n",
     "    mo_likls[i].eval()\n",
     "\n",
-    "y_best_curr = torch.max((train_y1 + train_y2)).item()\n",
+    "y_best_curr = torch.max((train_y1 + train_y2 + train_y3)).item()\n",
     "\n",
     "acf_vals = [acquisition_func(search_grid[i, :].reshape(1, -1), mo_models, mo_likls, y_best_curr) for i in range(10*n_restarts)]\n",
     "\n",
@@ -513,149 +335,158 @@
     "    if res.fun < best_acquisition_values:\n",
     "        best_acquisition_values = res.fun\n",
     "        best_x = res.x\n",
-    "\n",
+    "    #print every 10 starting points\n",
+    "    if i%10 == 0:\n",
+    "        print('Iteration {0:d} - Best Acf value = {1:.3f}'.format(i, best_acquisition_values))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "new_point = best_x\n",
     "new_acf = (-1.0) * best_acquisition_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# inverse transform \n",
-    "def inverse_transform(val, mean, std):\n",
-    "    return std * val + mean"
+    "def new_output(X, models, likelihoods, transsform_func, scaling):\n",
+    "    '''\n",
+    "    X: (np array) new best point\n",
+    "    models: (list) all model objects ; regression first and last model is classification\n",
+    "    likelihoods: (list) likelihood objects; last one is classification\n",
+    "    transform_func: (function handle) function to inverse transform all objective values\n",
+    "    scaling: (dictionary) values of x and y means and standard deviation used for scaling\n",
+    "    '''\n",
+    "    X = torch.tensor(X.reshape(1,-1), dtype=torch.float)\n",
+    "    obj_models = models[0:-1]\n",
+    "    class_model = models[-1]\n",
+    "    # value of objective function - inverse transformed\n",
+    "    obj_likls = likelihoods[0:-1]\n",
+    "    obj_preds = []\n",
+    "    for i in range(len(obj_models)):\n",
+    "        pred, _ = predict(obj_models[i], obj_likls[i], X)\n",
+    "        obj_preds.append(transsform_func(pred, scaling['ymeans'].values[i], scaling['ystddv'].values[i])) \n",
+    "    # feasibility\n",
+    "    logit_dist = class_model(X)\n",
+    "    samples = logit_dist.sample(torch.Size((256,))).exp()\n",
+    "    class_probabilities = (samples / samples.sum(-2, keepdim=True)).mean(0)\n",
+    "    feasibility = class_probabilities[1] # Pr(feasible|X)\n",
+    "    #inverse transformed input\n",
+    "    X_tr = [transsform_func(X[0][i].item(), scaling['xmeans'].values[i], scaling['xstddv'].values[i]) for i in range(8)]\n",
+    "\n",
+    "    return X_tr, obj_preds, feasibility\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted output at new point -  tensor([2.4799])\n",
-      "std deviation -  tensor([1.1549])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pred, std = multi_objective_predict(new_point.reshape(1,-1), mo_models, mo_likls)\n",
-    "print('Predicted output at new point - ', pred)\n",
-    "print('std deviation - ', std)"
+    "new_pt_tr, new_obj, new_feasib = new_output(new_point, mo_models, mo_likls, inverse_transform, scaling)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([2.4151])  and  tensor([0.0647])\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_pt_tensor = torch.tensor(new_point.reshape(1,-1), dtype=torch.float)\n",
-    "y1_pred, _ = predict(reg_model1, reg_likl1, new_pt_tensor)\n",
-    "y2_pred, _ = predict(reg_model2, reg_likl2, new_pt_tensor)\n",
-    "print(y1_pred, ' and ', y2_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.22111523, -1.14006761, -0.46216723,  1.24853254,  0.43425369,\n",
-       "        0.17214098, -1.4405752 ,  1.41954212])"
+       "array([ 5235.69939167,    65.04736558,    24.80448022, 13501.47653811,\n",
+       "          91.62501695,    76.91168355,    63.28927553,    99.5972619 ])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_point"
+    "np.array(new_pt_tr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([179.7163])\n"
-     ]
-    }
-   ],
-   "source": [
-    "y1_pred = inverse_transform(y1_pred, ymeans.values[0], ystddv.values[0])\n",
-    "y2_pred = inverse_transform(y2_pred, ymeans.values[1], ystddv.values[1])\n",
-    "print(y1_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "143.9980154794394"
+       "[tensor([171.7722]), tensor([35.4881]), tensor([11.7783])]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inverse_transform(y_best_curr, ymeans.values[0], ystddv.values[0])"
+    "new_obj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[9041.774785340262,\n",
-       " 14.50141610594094,\n",
-       " 14.243751126584717,\n",
-       " 13887.588474175576,\n",
-       " 92.70429419988953,\n",
-       " 55.35999886869985,\n",
-       " 62.05777298547319,\n",
-       " 98.26019646051431]"
+       "tensor([11.7783])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_pt_tr = [inverse_transform(new_point[i], xmeans.values[i], xstddv.values[i]) for i in range(len(new_point))]\n",
-    "new_pt_tr"
+    "#predict shear modulus -\n",
+    "reg_model3.eval()\n",
+    "reg_likl3.eval()\n",
+    "y3_pred, _ = predict(reg_model3, reg_likl3, torch.tensor(new_point.reshape(1,-1), dtype=torch.float))\n",
+    "inverse_transform(y3_pred, ymeans.values[2], ystddv.values[2])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.9459])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_feasib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
