feasibility aware EHVI

--- a/BO-GTData/BO_botorch_version.ipynb
+++ b/BO-GTData/BO_botorch_version.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gouravkumbhojkar/miniconda3/envs/botorch/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\goura\\anaconda3\\envs\\botorch\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -25,6 +25,13 @@
     "from scipy.stats import norm\n",
     "from scipy.optimize import minimize\n",
     "import botorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Define classification model class**"
    ]
   },
   {
@@ -75,8 +82,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Read and normalize training data**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,56 +175,6 @@
     "cls_likl = gpytorch.likelihoods.DirichletClassificationLikelihood(train_y4, learn_additional_noise=False, alpha_epsilon=1e-4)\n",
     "cls_model = DirichletGPModel(train_x, cls_likl.transformed_targets, cls_likl, num_classes=cls_likl.num_classes)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Setup for regression models usign BoTorch**\n",
-    "\n",
-    "Implementing Expected Hyper-volume improvement acquisition"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/gouravkumbhojkar/miniconda3/envs/botorch/lib/python3.11/site-packages/botorch/models/utils/assorted.py:202: InputDataWarning: Input data is not standardized (mean = tensor([0.0898], dtype=torch.float64), std = tensor([1.0414], dtype=torch.float64)). Please consider scaling the input to zero mean and unit variance.\n",
-      "  warnings.warn(msg, InputDataWarning)\n",
-      "/Users/gouravkumbhojkar/miniconda3/envs/botorch/lib/python3.11/site-packages/botorch/models/utils/assorted.py:202: InputDataWarning: Input data is not standardized (mean = tensor([0.0694], dtype=torch.float64), std = tensor([1.0530], dtype=torch.float64)). Please consider scaling the input to zero mean and unit variance.\n",
-      "  warnings.warn(msg, InputDataWarning)\n",
-      "/Users/gouravkumbhojkar/miniconda3/envs/botorch/lib/python3.11/site-packages/botorch/models/utils/assorted.py:202: InputDataWarning: Input data is not standardized (mean = tensor([0.0701], dtype=torch.float64), std = tensor([1.0715], dtype=torch.float64)). Please consider scaling the input to zero mean and unit variance.\n",
-      "  warnings.warn(msg, InputDataWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#define regression model - using botorch\n",
-    "from botorch.models.gp_regression import SingleTaskGP\n",
-    "from botorch.models.model_list_gp_regression import ModelListGP\n",
-    "from gpytorch.mlls.sum_marginal_log_likelihood import SumMarginalLogLikelihood\n",
-    "\n",
-    "train_data = [train_y1, train_y2, train_y3]\n",
-    "reg_models = []\n",
-    "for labels in train_data:\n",
-    "    reg_models.append(\n",
-    "        SingleTaskGP(train_x, labels)\n",
-    "    )\n",
-    "model = ModelListGP(*reg_models)\n",
-    "mll = SumMarginalLogLikelihood(model.likelihood, model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
