--- a/BO-GTData/BO_wo_feasibility_botorch.ipynb
+++ b/BO-GTData/BO_wo_feasibility_botorch.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\goura\\AppData\\Local\\Temp\\ipykernel_13992\\1169323377.py:9: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ..\\torch\\csrc\\utils\\tensor_new.cpp:277.)\n",
+      "  bounds = torch.tensor([np.array(xmins), np.array(xmaxs)], dtype=dtype)\n"
+     ]
+    }
+   ],
    "source": [
     "from botorch.models.gp_regression import SingleTaskGP\n",
     "from botorch.models.model_list_gp_regression import ModelListGP\n",
@@ -92,7 +101,7 @@
     "xmins = x_pd.min(axis=0).values\n",
     "xmaxs = x_pd.max(axis=0).values\n",
     "bounds = torch.tensor([np.array(xmins), np.array(xmaxs)], dtype=dtype)\n",
-    "train_x = normalize(train_x, bounds=bounds)\n",
+    "train_x = normalize(train_x, bounds=bounds) # normalized to unit hypercube - all values betn 0 and 1\n",
     "\n",
     "models = []\n",
     "for data in train_y_list:\n",
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,14 +175,14 @@
     "    # observe new values\n",
     "    new_x = unnormalize(candidates.detach(), bounds=bounds)\n",
     "    # new_obj_true = problem(new_x)\n",
-    "    # new_obj = new_obj_true \n",
+    "    # new_obj = new_obj_true + torch.randn_like(new_obj_true) * NOISE_SE\n",
     "\n",
-    "    return new_x #, new_obj, new_obj_true"
+    "    return new_x, _ #, new_obj, new_obj_true"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,10 +202,64 @@
     "# define acquisition modules\n",
     "sampler = SobolQMCNormalSampler(sample_shape=torch.Size([128]))\n",
     "\n",
-    "new_x_qehvi = optimize_qehvi_and_get_observation(model, train_x, train_y_list, sampler)\n",
-    "\n",
-    "#need to define the current best to calculate the hypervolume with respect to"
+    "#get new sample based on current training data and current posterior\n",
+    "new_x_qehvi, new_acq_vals = optimize_qehvi_and_get_observation(model, train_x, train_y_list, sampler)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([185109.8701, 236232.9800, 277030.8079, 309808.4954],\n",
+       "       dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#printing acquisition func values at the new point(s)\n",
+    "new_acq_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 66.5451, 105.2289,  38.8474],\n",
+       "        [ 82.9356,  74.5828,  29.9524],\n",
+       "        [ 66.0353,  94.7371,  33.8808],\n",
+       "        [139.4768,  22.2623,  26.4900]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# printing the predicted output at the new point(s)\n",
+    "with torch.no_grad():\n",
+    "    new_x_pred = model.posterior(normalize(new_x_qehvi, bounds)).mean\n",
+    "new_x_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
