--- a/gp-separate-models/classification/classify_GTData.ipynb
+++ b/gp-separate-models/classification/classify_GTData.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Classification using Dirichlet-based GP classifier**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
