--- a/gp-separate-models/classification/classify_GTData.ipynb
+++ b/gp-separate-models/classification/classify_GTData.ipynb
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-13.8156,  -0.3464,  -0.3464, -13.8156, -13.8156, -13.8156, -13.8156,\n",
+       "         -13.8156, -13.8156, -13.8156, -13.8156, -13.8156,  -0.3464, -13.8156,\n",
+       "         -13.8156,  -0.3464, -13.8156,  -0.3464],\n",
+       "        [ -0.3464, -13.8156, -13.8156,  -0.3464,  -0.3464,  -0.3464,  -0.3464,\n",
+       "          -0.3464,  -0.3464,  -0.3464,  -0.3464,  -0.3464, -13.8156,  -0.3464,\n",
+       "          -0.3464, -13.8156,  -0.3464, -13.8156]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "likelihood.transformed_targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -734,18 +759,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gouravkumbhojkar/miniconda3/envs/myenv/lib/python3.11/site-packages/gpytorch/likelihoods/gaussian_likelihood.py:300: GPInputWarning: You have passed data through a FixedNoiseGaussianLikelihood that did not match the size of the fixed noise, *and* you did not specify noise. This is treated as a no-op.\n",
+      "c:\\Users\\goura\\anaconda3\\envs\\gpytorch\\Lib\\site-packages\\gpytorch\\models\\exact_gp.py:284: GPInputWarning: The input matches the stored training data. Did you forget to call model.train()?\n",
       "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ -6.9759,  -1.0887,  -1.1839,  -8.0955,  -9.1449,  -6.9270,  -6.5961,\n",
+       "          -7.5728,  -7.9696,  -9.0082,  -5.4899,  -8.2502,  -0.6732,  -9.2968,\n",
+       "          -8.6084,  -1.3455, -10.4515,  -0.7931],\n",
+       "        [ -0.5882,  -6.1409,  -6.4615,  -0.5744,  -0.4715,  -0.5638,  -0.6556,\n",
+       "          -0.5536,  -0.5401,  -0.4994,  -0.7498,  -0.5305,  -7.3173,  -0.4819,\n",
+       "          -0.4842,  -5.7556,  -0.4011,  -7.1019]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "model.eval()\n",
+    "likelihood.eval()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    posterior = likelihood(model(train_x), noise=torch.zeros(train_x.shape[0]))\n",
+    "    pred_means = posterior.mean\n",
+    "pred_means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model.eval() # calculates latent variable 'f' (logits) bcoz we used DirichletGP\n",
     "likelihood.eval()\n",
@@ -762,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,6 +850,26 @@
     "# print(\"validation idx - \", validation_idx)\n",
     "print(\"Probability of being in class 0 (infeasible) = \", probabilities[0].numpy())\n",
     "print(\"Probability of being in class 1 (feasible) = \", probabilities[1].numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 20])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_means.shape"
    ]
   },
   {
@@ -860,9 +935,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "gpytorch",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -874,7 +949,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
