naive bayes GT Data

--- a/Generative_classifier/naive_bayes_tutorial.ipynb
+++ b/Generative_classifier/naive_bayes_tutorial.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -170,6 +170,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test using sklearn's Gaussian Naive bayes classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted probability [[1.00000000e+00 5.52387327e-30]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = GaussianNB() \n",
+    "\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "# select single sample\n",
+    "Xsample, ysample = [X[0]], [y[0]]\n",
+    "\n",
+    "#make probability prediction\n",
+    "yhat_prob = model.predict_proba(Xsample)\n",
+    "print('Predicted probability', yhat_prob)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GaussianNB() assumes that all conditional distributions P(X|y_c) are gaussian distributions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -193,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
